<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <mn.student.letsgo.utils.CircleImageView
            android:id="@+id/place_com_user_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/place_com_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/writeReview" />
    </LinearLayout>

    <ImageView
        android:id="@+id/place_com_img_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/place_com_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/red_but"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_action_camera" />

            <mn.student.letsgo.text.Bold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/addPhoto"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <mn.student.letsgo.text.Bold
            android:id="@+id/place_com_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_but"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/send"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_red" />

</LinearLayout>