<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/shake_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shake" />

    <mn.student.letsgo.text.Bold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/shakeToStart"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_blue" />

    <mn.student.letsgo.text.Bold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/selectYourMood"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dark_blue" />

    <Spinner
        android:id="@+id/mood_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white" />
    
    <mn.student.letsgo.text.Regular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/selectDistance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/seekDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:thumb="@drawable/ic_launcher"
        android:max="9"
        android:progress="0"/>

    <LinearLayout
			android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@android:color/transparent"
        	android:paddingLeft="5dp"
        	android:paddingRight="5dp"
        	android:orientation="horizontal"
        	android:visibility="visible"
        	android:weightSum="10" >
	 
			<TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="1"
            	android:textColor="@android:color/white"/>
			<TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="2"
            	android:textColor="@android:color/white"/>
        	<TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="3"
            	android:textColor="@android:color/white"/>
        	<TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="4"
            	android:textColor="@android:color/white"/>
        	<TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="5"
            	android:textColor="@android:color/white"/> 
            <TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="6"
            	android:textColor="@android:color/white"/> 
            <TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="7"
            	android:textColor="@android:color/white"/> 
            <TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="8"
            	android:textColor="@android:color/white"/> 
            <TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="9"
            	android:textColor="@android:color/white"/> 
            <TextView
	        	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="center_horizontal"
            	android:text="10"
            	android:textColor="@android:color/white"/> 
		</LinearLayout>
</LinearLayout>