<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/mn.student.letsgo"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:panelHeight="48dp"
        sothree:paralaxOffset="100dp"
        sothree:shadowHeight="4dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <mn.student.letsgo.utils.CircleImageView
                        android:id="@+id/place_det_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingTop="70dp"
                        app:border_color="@color/dark_red"
                        app:border_width="1dp" />

                    <mn.student.letsgo.text.Regular
                        android:id="@+id/place_det_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_red" />

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_mood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_blue" />

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_visit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp" >

                        <mn.student.letsgo.utils.CircleImageView
                            android:id="@+id/place_det_user_img"
                            android:layout_width="50dp"
                            android:layout_height="50dp" />

                        <mn.student.letsgo.text.Light
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/by"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/dark_red" />

                        <mn.student.letsgo.text.Light
                            android:id="@+id/place_det_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/dark_red" />
                    </LinearLayout>

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/light_red" />

                    <mn.student.letsgo.text.Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/service"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_red" />

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/light_red" />

                    <mn.student.letsgo.text.Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/address"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_red" />

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/light_red" />

                    <mn.student.letsgo.text.Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_red" />

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/light_red" />

                    <mn.student.letsgo.text.Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/timetable"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_red" />

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_timeSchedule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/light_red" />

                    <mn.student.letsgo.text.Light
                        android:id="@+id/place_det_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_red" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeeee"
            android:clickable="true"
            android:focusable="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/red_but"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <mn.student.letsgo.utils.CircleImageView
                    android:id="@+id/place_det_panel_user_img"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp" />

                <mn.student.letsgo.text.Light
                    android:id="@+id/place_det_panel_title"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>


                

                <ListView
                    android:id="@+id/place_det_reviewList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </ListView>
         
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</RelativeLayout>